# pr-sideber

./: .dependency-cruiser.cjs  .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: post-edit-rust.sh  post-edit-ts.sh  pre-command-secret-check.sh  session-start.sh
.claude/hooks/tests/: test-pre-command-secret-check.sh
.claude/rules/: github-templates.md  github-tools.md  rust.md  security.md
.claude/skills/develop/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
docs/adr/: 001-device-flow-no-pkce-state.md  002-session-issue-mapping-prefix-only.md  README.md
docs/superpowers/specs/: 2026-04-01-epic-issue-navigation-design.md
rust-core/: Cargo.toml
rust-core/crates/adapter-wasm/: Cargo.toml
rust-core/crates/adapter-wasm/src/: dto.rs  epic_dto.rs  error.rs  issue_dto.rs  issue_parser.rs  lib.rs  parser.rs
rust-core/crates/adapter-wasm/tests/: integration.rs
rust-core/crates/adapter-wasm/tests/fixtures/: empty_response.json  invalid_response.json  valid_response.json
rust-core/crates/domain/: Cargo.toml
rust-core/crates/domain/src/: dto.rs  entity.rs  epic.rs  error.rs  issue.rs  lib.rs  status.rs
rust-core/crates/usecase/: Cargo.toml
rust-core/crates/usecase/src/: classify.rs  determine.rs  epic_process.rs  issue_process.rs  lib.rs  process.rs  sort.rs  url.rs
scripts/: generate-icons.mjs  verify-no-dev-logs.sh  verify-no-dev-logs.test.sh
src/: vite-env.d.ts
src/adapter/chrome/: alarm.adapter.ts  identity.adapter.ts  message.adapter.ts  oauth.config.ts  storage.adapter.ts  tab-navigation.adapter.ts  window-manager.adapter.ts
src/adapter/github/: dev-details.ts  graphql-client.ts  issue-graphql-client.ts  rate-limit.ts  (+1 more)
src/background/: bootstrap.ts  claude-session-watcher.ts  index.ts  message-handler.ts  types.ts  workspace-open.usecase.ts
src/build-config/: build-guards.ts
src/content/: claude-session-scraper.ts
src/shared/: crypto.ts  messaging.ts
src/sidepanel/: App.svelte  main.ts
src/wasm/: epic-processor.ts  greeting.test.ts  greeting.ts  index.ts  issue-processor.ts  pr-processor.test.ts  pr-processor.ts
(+138 files in other folders)
